[package]
name = "whoop-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bluster = { git = "https://github.com/bWanShiTong/bluster", branch = "master" }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics"] }
